[project]
authors = [
    {name="woodFordR", email="adam@kaewell.com"}
]
name = "rack_em"
version = "0.0.1"
description = "http server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyparsing~=3.0",
    "lark~=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
rack_em = "rack_em:main"

[tool.uv]
package = true

[tool.uv.sources]
package_name = { index = "pypi_custom" }

